syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "storage/schedule.proto";
import "storage/user.proto";

package storage;

// Next Tag: 13
message ComplianceOperatorProfileV2 {
    string              id              = 1 [(gogoproto.moretags) = 'sql:"pk"'];
    string              profile_id      = 2;
    string              name            = 3 [(gogoproto.moretags) = 'search:"Compliance Profile Name,hidden,store" sql:"index=category:unique;name:rule_unique_indicator"'];
    string              version         = 4 [(gogoproto.moretags) = 'search:"Compliance Operator Version,hidden,store" sql:"index=category:unique;name:rule_unique_indicator"'];
    string              profile_version = 5 [(gogoproto.moretags) = 'search:"Compliance Profile Version,hidden,store"'];
    repeated string     product_type    = 6 [(gogoproto.moretags) = 'search:"Compliance Operator Profile Product Type,hidden,store"'];
    string              standard        = 7 [(gogoproto.moretags) = 'search:"Compliance Operator Profile Standard,hidden,store"'];
    map<string, string> labels          = 8;
    map<string, string> annotations     = 9;
    string              description     = 10;
    message Rule {
        string rule_name       = 1 [(gogoproto.moretags) = 'search:"-" sql:"fk(ComplianceOperatorRuleV2:name),no-fk-constraint"'];
    }
    repeated Rule       rules       = 11;
    string              product     = 12 [(gogoproto.moretags) = 'search:"Compliance Operator Profile Product,hidden,store"'];
}

// Next Tag: 12
message ComplianceOperatorRuleV2 {
    string              name         = 1 [(gogoproto.moretags) = 'search:"Compliance Rule Name,hidden,store" sql:"pk"'];
    string              version      = 2 [(gogoproto.moretags) = 'search:"Compliance Operator Version,hidden,store"'];
    string              rule_version = 3 [(gogoproto.moretags) = 'search:"Compliance Rule Version,hidden,store"'];
    string              rule_type    = 4 [(gogoproto.moretags) = 'search:"Compliance Operator Rule Type,hidden,store"'];
    string              severity     = 5 [(gogoproto.moretags) = 'search:"Compliance Operator Rule Severity,hidden,store"'];
    map<string, string> labels       = 6;
    map<string, string> annotations  = 7;
    string              title        = 8;
    string              description  = 9;
    string              rationale    = 10;
    string              fixes        = 11;
}

// Next Tag: 15
message ComplianceOperatorScanSettingV2 {
    enum NodeRole {
        INFRA = 0;
        WORKER = 1;
        MASTER = 2;
    }

    string                        name                     = 1 [(gogoproto.moretags) = 'sql:"pk"'];
    bool                          auto_apply_remediations  = 2;
    bool                          auto_update_remediations = 3;
    bool                          one_time_scan            = 4;
    map<string, string>           labels                   = 5;
    map<string, string>           annotations              = 6;
    message Profile {
        string                    profile_id               = 1 [(gogoproto.moretags) = 'search:"-" sql:"fk(ComplianceOperatorProfileV2:id),no-fk-constraint"'];
    }
    repeated Profile              profiles                 = 7;
    message ClusterScanStatus {
        string                    cluster_id               = 1 [(gogoproto.moretags) = 'search:"Cluster ID,hidden,store" sql:"fk(Cluster:id),no-fk-constraint,type(uuid)"'];
        repeated string           errors                   = 2;
    }
    repeated ClusterScanStatus    clusters                 = 8;
    repeated NodeRole             node_roles               = 9;
    bool                          strict_node_scan         = 10;
    // Starting point for schedule will probably have to build upon it
    storage.Schedule              schedule                 = 11;
    google.protobuf.Timestamp     created_time             = 12;
    google.protobuf.Timestamp     last_updated_time        = 13;
    // Most recent user to update the scan settings
    SlimUser                      created_by               = 14;
}
